# panoply

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: main.yml  update_brew_formula.yml
homebrew/: panoply_template.rb  update_formula.sh  update_resources.sh  update_url.sh
panoply/: __main__.py  commands.txt  panoply.py  toolbox.py
toolboxjeremynac/: __main__.py
