[tool.poetry]
name = "toolbox"
version = "0.1.6"
description = ""
authors = ["Jeremy Naccache"]
license = "LICENCE"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toolbox = 'toolbox.toolbox:main'
